# demo-photon-generation

./: CMakeLists.txt  README.md  build.sh
include/: GPUOpEngine.hh  GPUParametersManager.hh  OpEngine.hh  ParametersManager.hh  cerenkov.hh  scintillation.hh
src/: GPUOpEngine.cu  OpEngine.cc  cerenkov.cc  scintillation.cc
tests/: demo-photon-generation-gpu.cu  demo-photon-generation.cc
